fix: dark mode

--- a/pages/settings/privacy.module.css
+++ b/pages/settings/privacy.module.css
@@ -8,3 +8,7 @@
     margin: 0;
     margin-bottom: 24px;
 }
+
+.text ol {
+    padding-left: 18px;
+}
